[tool.poetry]
name = "valista"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
types-PyYAML = "^6.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[tool.poetry.scripts]
exec = "cli:exec"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
